internal/parser/config/Config.g4
grammar Config;

/*
 * Parser rules
 */

document
    : ( optionsBlock
      | schemaBlock
      )* EOF
    ;

optionsBlock
    : 'options' optionsBody
    ;

optionsBody
    :   '{' ().? '}'
    ;

schemaBlock
    : 'schema' schemaBody
    ;

schemaBody
    :   '{' schemaTypes '}'
    ;

schemaTypes
   : typeDecl (typeDecl)*
   ;

typeDecl
    : 'type' typeName typeBody
    ;

typeName
    :   TypeIdent
    ;

typeBody
    :   '{' (   field
            )+
        '}'
    ;

field
    : fieldName fieldType
    ;

fieldName
    :   FieldIdent
    ;

fieldType
    :   (   'ID'
        |   'int'
        |   'float'
        |   'string'
        |   'bool'
        |   'datetime'
        |   'geopoint'
        |   TypeIdent
        |   TypeIdentArray
        )
    ;


/*
 * Lexical elements
 */

// Letters and digits

fragment ULetter
    : [A-Z]
    ;

fragment LLetter
    : [a-z_]
    ;

fragment Letter
    : [A-Za-z_]
    ;

fragment Digit
    : [0-9]
    ;

TypeIdentArray
    : LBRACK TypeIdent RBRACK
    ;

TypeIdent
    : ULetter (Letter | Digit)*
    ;

FieldIdent
    : LLetter (Letter | Digit)*
    ;


// Separators

//LBRACE  : '{';
//RBRACE  : '}';
LBRACK  : '[';
RBRACK  : ']';
//COMMA   : ',';
//DOT     : '.';
//SEMI    : ';';


// Whitespace and comments

WS
    : [ \t\u000C]+ -> skip
    ;

NEWLINE
    : ('\r'? '\n' | '\r')+ -> skip
    ;

COMMENT
    : '/*' .*? '*/' -> skip
    ;

LINE_COMMENT
    : '//' ~[\r\n]* -> skip
    ;
